app/styles/custom-application/toast.scss
.vl-alert-relative {
  opacity: 0.85;
  position: fixed;
  z-index: 100;
  box-shadow: $au-shadow-small;

  animation: fpFadeInLeft 0.3s linear;
  opacity: 1;

  &--center {
    left: 20%;
    top: 60px;
    right: 20%;
    width: 60%;
  }

  &--center-mid {
    height: 10%;
    opacity: 1;
    bottom: 1%;
    width: 25%;
    right: 2%;
    & button.vl-alert__close {
      font-size: 1.3em;
      top: 1.3rem;
      right: 1.3rem;
    }
  }

  &:hover {
    opacity: 1;
  }

}

.toasts-container {
  position: absolute;
  display: flex;
  flex-direction: column;
  bottom: 1%;
  right: 0;
  width: 30%;

  .vl-alert-relative {
    opacity: 1;
    position: relative;

    &--center-mid {
      height: auto !important;
      width: 100% !important;
      bottom: 1%;
      right: 2%;
      & button.vl-alert__close {
        font-size: 1.3em;
        top: 1.3rem;
        right: 1.3rem;
      }
    }
  }
}

